--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,83 @@
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.9.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+certifi==2025.8.3
+cffi==1.17.1
+channels==4.3.1
+channels_redis==4.3.0
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+constantly==23.10.4
+cryptography==45.0.5
+daphne==4.2.1
+distro==1.9.0
 Django==5.2.4
-psycopg2-binary==2.9.10
-openai==1.98.0
-python-dotenv==1.1.1
-Pillow==11.3.0
-PyPDF2==3.0.1
-python-docx==1.2.0
-scikit-learn==1.7.1
+execnet==2.1.1
+griffe==1.9.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.1
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+iniconfig==2.1.0
+jiter==0.10.0
+joblib==1.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+lxml==6.0.0
+mcp==1.12.3
+msgpack==1.1.1
 numpy==2.3.2
+openai==1.98.0
+openai-agents==0.2.4
+packaging==25.0
+pillow==11.3.0
+pluggy==1.6.0
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyOpenSSL==25.1.0
+PyPDF2==3.0.1
+pytest==8.4.1
+pytest-shutil==1.8.1
+python-docx==1.2.0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+redis==6.2.0
+referencing==0.36.2
+requests==2.32.4
+rpds-py==0.26.0
+scikit-learn==1.7.1
+scipy==1.16.1
+service-identity==24.2.0
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+sqlparse==0.5.3
+sse-starlette==3.0.2
+starlette==0.47.2
+termcolor==3.1.0
+threadpoolctl==3.6.0
+tqdm==4.67.1
+Twisted==25.5.0
+txaio==25.6.1
+types-requests==2.32.4.20250611
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.35.0
+vapi-server-sdk==1.7.0
+websocket-client==1.8.0
+websockets==15.0.1
+zope.interface==7.2
