--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ jsonschema-specifications==2025.4.1
 lxml==6.0.0
 mcp==1.12.3
 msgpack==1.1.1
-numpy==2.3.2
+numpy
 openai==1.98.0
 openai-agents==0.2.4
 packaging==25.0
@@ -80,4 +80,5 @@ uvicorn==0.35.0
 vapi-server-sdk==1.7.0
 websocket-client==1.8.0
 websockets==15.0.1
+whitenoise==6.9.0
 zope.interface==7.2
