--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.9.1
 attrs==25.3.0
 autobahn==24.4.2
 Automat==25.4.16
+beautifulsoup4==4.13.4
 certifi==2025.8.3
 cffi==1.17.1
 channels==4.3.1
@@ -15,8 +16,11 @@ constantly==23.10.4
 cryptography==45.0.5
 daphne==4.2.1
 distro==1.9.0
-Django==5.2.4
+Django==4.2.23
+django-bootstrap-v5==1.0.11
+django-google-fonts==0.0.3
 execnet==2.1.1
+fontawesome-free==5.15.4
 griffe==1.9.0
 h11==0.16.0
 httpcore==1.0.9
@@ -33,7 +37,7 @@ jsonschema-specifications==2025.4.1
 lxml==6.0.0
 mcp==1.12.3
 msgpack==1.1.1
-numpy
+numpy==2.3.2
 openai==1.98.0
 openai-agents==0.2.4
 packaging==25.0
@@ -64,11 +68,13 @@ service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 sqlparse==0.5.3
 sse-starlette==3.0.2
 starlette==0.47.2
 termcolor==3.1.0
 threadpoolctl==3.6.0
+tinycss2==1.4.0
 tqdm==4.67.1
 Twisted==25.5.0
 txaio==25.6.1
@@ -78,6 +84,7 @@ typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
 vapi-server-sdk==1.7.0
+webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 whitenoise==6.9.0
